ClanguageParser.py
# Generated from Clanguage.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class ClanguageParser ( Parser ):

    grammarFileName = "Clanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#'", "'include'", "'['", "']'", "';'", 
                     "'='", "'{'", "','", "'}'", "'(char)'", "'('", "')'", 
                     "'return'", "'if'", "'else if'", "'else'", "'while'", 
                     "'for'", "'void'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ASSIGN_OP", "TYPE", "LOGIC_OP", "NOT_OP", "RELATION_OP", 
                      "COMPUTE_OP", "UNITARY_OP", "ID", "INT", "FLOAT", 
                      "STRING", "HEADER", "Char", "WS", "CONTROL" ]

    RULE_root = 0
    RULE_include = 1
    RULE_statement = 2
    RULE_valuable_statement = 3
    RULE_constant = 4
    RULE_char_element = 5
    RULE_array_element = 6
    RULE_string_element = 7
    RULE_unvaluable_statement = 8
    RULE_array_statement = 9
    RULE_assign_statement = 10
    RULE_logic_statement = 11
    RULE_relation_statement = 12
    RULE_compute_statement = 13
    RULE_unitary_statement = 14
    RULE_function_call = 15
    RULE_param = 16
    RULE_return_statement = 17
    RULE_variate_statement = 18
    RULE_if_statement = 19
    RULE_if_sentence = 20
    RULE_elseif_sentence = 21
    RULE_else_sentence = 22
    RULE_while_statement = 23
    RULE_for_statement = 24
    RULE_for_init = 25
    RULE_for_change = 26
    RULE_function_statement = 27

    ruleNames =  [ "root", "include", "statement", "valuable_statement", 
                   "constant", "char_element", "array_element", "string_element", 
                   "unvaluable_statement", "array_statement", "assign_statement", 
                   "logic_statement", "relation_statement", "compute_statement", 
                   "unitary_statement", "function_call", "param", "return_statement", 
                   "variate_statement", "if_statement", "if_sentence", "elseif_sentence", 
                   "else_sentence", "while_statement", "for_statement", 
                   "for_init", "for_change", "function_statement" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ASSIGN_OP=20
    TYPE=21
    LOGIC_OP=22
    NOT_OP=23
    RELATION_OP=24
    COMPUTE_OP=25
    UNITARY_OP=26
    ID=27
    INT=28
    FLOAT=29
    STRING=30
    HEADER=31
    Char=32
    WS=33
    CONTROL=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClanguageParser.IncludeContext)
            else:
                return self.getTypedRuleContext(ClanguageParser.IncludeContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClanguageParser.StatementContext)
            else:
                return self.getTypedRuleContext(ClanguageParser.StatementContext,i)


        def getRuleIndex(self):
            return ClanguageParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = ClanguageParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ClanguageParser.T__0:
                self.state = 56
                self.include()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ClanguageParser.T__10) | (1 << ClanguageParser.T__12) | (1 << ClanguageParser.T__13) | (1 << ClanguageParser.T__16) | (1 << ClanguageParser.T__17) | (1 << ClanguageParser.T__18) | (1 << ClanguageParser.TYPE) | (1 << ClanguageParser.NOT_OP) | (1 << ClanguageParser.UNITARY_OP) | (1 << ClanguageParser.ID) | (1 << ClanguageParser.INT) | (1 << ClanguageParser.FLOAT) | (1 << ClanguageParser.Char) | (1 << ClanguageParser.CONTROL))) != 0):
                self.state = 62
                self.statement()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ClanguageParser.STRING, 0)

        def HEADER(self):
            return self.getToken(ClanguageParser.HEADER, 0)

        def getRuleIndex(self):
            return ClanguageParser.RULE_include

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = ClanguageParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(ClanguageParser.T__0)
                self.state = 69
                self.match(ClanguageParser.T__1)
                self.state = 70
                self.match(ClanguageParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(ClanguageParser.T__0)
                self.state = 72
                self.match(ClanguageParser.T__1)
                self.state = 73
                self.match(ClanguageParser.HEADER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unvaluable_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Unvaluable_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Return_statementContext,0)


        def valuable_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Valuable_statementContext,0)


        def getRuleIndex(self):
            return ClanguageParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ClanguageParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ClanguageParser.T__13, ClanguageParser.T__16, ClanguageParser.T__17, ClanguageParser.T__18, ClanguageParser.TYPE, ClanguageParser.CONTROL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.unvaluable_statement()
                pass
            elif token in [ClanguageParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.return_statement()
                pass
            elif token in [ClanguageParser.T__10, ClanguageParser.NOT_OP, ClanguageParser.UNITARY_OP, ClanguageParser.ID, ClanguageParser.INT, ClanguageParser.FLOAT, ClanguageParser.Char]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.valuable_statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Valuable_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ClanguageParser.RULE_valuable_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Id_valuableContext(Valuable_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Valuable_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_valuable" ):
                return visitor.visitId_valuable(self)
            else:
                return visitor.visitChildren(self)


    class Not_id_valuableContext(Valuable_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Valuable_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def array_element(self):
            return self.getTypedRuleContext(ClanguageParser.Array_elementContext,0)

        def constant(self):
            return self.getTypedRuleContext(ClanguageParser.ConstantContext,0)

        def char_element(self):
            return self.getTypedRuleContext(ClanguageParser.Char_elementContext,0)

        def assign_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Assign_statementContext,0)

        def relation_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Relation_statementContext,0)

        def compute_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Compute_statementContext,0)

        def logic_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Logic_statementContext,0)

        def function_call(self):
            return self.getTypedRuleContext(ClanguageParser.Function_callContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_id_valuable" ):
                return visitor.visitNot_id_valuable(self)
            else:
                return visitor.visitChildren(self)



    def valuable_statement(self):

        localctx = ClanguageParser.Valuable_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_valuable_statement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = ClanguageParser.Id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(ClanguageParser.ID)
                pass

            elif la_ == 2:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.array_element()
                pass

            elif la_ == 3:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.constant()
                pass

            elif la_ == 4:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.char_element()
                pass

            elif la_ == 5:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.assign_statement()
                pass

            elif la_ == 6:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.relation_statement()
                pass

            elif la_ == 7:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 87
                self.compute_statement(0)
                pass

            elif la_ == 8:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.logic_statement(0)
                pass

            elif la_ == 9:
                localctx = ClanguageParser.Not_id_valuableContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.function_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ClanguageParser.RULE_constant

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Const_intContext(ConstantContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.ConstantContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(ClanguageParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_int" ):
                return visitor.visitConst_int(self)
            else:
                return visitor.visitChildren(self)


    class Const_floatContext(ConstantContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.ConstantContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(ClanguageParser.FLOAT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_float" ):
                return visitor.visitConst_float(self)
            else:
                return visitor.visitChildren(self)



    def constant(self):

        localctx = ClanguageParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constant)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ClanguageParser.INT]:
                localctx = ClanguageParser.Const_intContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.match(ClanguageParser.INT)
                pass
            elif token in [ClanguageParser.FLOAT]:
                localctx = ClanguageParser.Const_floatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.match(ClanguageParser.FLOAT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Char_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Char(self):
            return self.getToken(ClanguageParser.Char, 0)

        def getRuleIndex(self):
            return ClanguageParser.RULE_char_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChar_element" ):
                return visitor.visitChar_element(self)
            else:
                return visitor.visitChildren(self)




    def char_element(self):

        localctx = ClanguageParser.Char_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_char_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(ClanguageParser.Char)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)

        def valuable_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Valuable_statementContext,0)


        def getRuleIndex(self):
            return ClanguageParser.RULE_array_element

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_element" ):
                return visitor.visitArray_element(self)
            else:
                return visitor.visitChildren(self)




    def array_element(self):

        localctx = ClanguageParser.Array_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ClanguageParser.ID)
            self.state = 99
            self.match(ClanguageParser.T__2)
            self.state = 100
            self.valuable_statement()
            self.state = 101
            self.match(ClanguageParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class String_elementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ClanguageParser.RULE_string_element

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Str_intContext(String_elementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.String_elementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)
        def INT(self):
            return self.getToken(ClanguageParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr_int" ):
                return visitor.visitStr_int(self)
            else:
                return visitor.visitChildren(self)


    class Str_idContext(String_elementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.String_elementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ClanguageParser.ID)
            else:
                return self.getToken(ClanguageParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr_id" ):
                return visitor.visitStr_id(self)
            else:
                return visitor.visitChildren(self)



    def string_element(self):

        localctx = ClanguageParser.String_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_string_element)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = ClanguageParser.Str_idContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(ClanguageParser.ID)
                self.state = 104
                self.match(ClanguageParser.T__2)
                self.state = 105
                self.match(ClanguageParser.ID)
                self.state = 106
                self.match(ClanguageParser.T__3)
                pass

            elif la_ == 2:
                localctx = ClanguageParser.Str_intContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(ClanguageParser.ID)
                self.state = 108
                self.match(ClanguageParser.T__2)
                self.state = 109
                self.match(ClanguageParser.INT)
                self.state = 110
                self.match(ClanguageParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Unvaluable_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ClanguageParser.RULE_unvaluable_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Not_control_unvalContext(Unvaluable_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Unvaluable_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variate_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Variate_statementContext,0)

        def if_statement(self):
            return self.getTypedRuleContext(ClanguageParser.If_statementContext,0)

        def for_statement(self):
            return self.getTypedRuleContext(ClanguageParser.For_statementContext,0)

        def while_statement(self):
            return self.getTypedRuleContext(ClanguageParser.While_statementContext,0)

        def function_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Function_statementContext,0)

        def array_statement(self):
            return self.getTypedRuleContext(ClanguageParser.Array_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_control_unval" ):
                return visitor.visitNot_control_unval(self)
            else:
                return visitor.visitChildren(self)


    class Control_unvalContext(Unvaluable_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Unvaluable_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTROL(self):
            return self.getToken(ClanguageParser.CONTROL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl_unval" ):
                return visitor.visitControl_unval(self)
            else:
                return visitor.visitChildren(self)



    def unvaluable_statement(self):

        localctx = ClanguageParser.Unvaluable_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_unvaluable_statement)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = ClanguageParser.Control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(ClanguageParser.CONTROL)
                pass

            elif la_ == 2:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.variate_statement()
                pass

            elif la_ == 3:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.if_statement()
                pass

            elif la_ == 4:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.for_statement()
                pass

            elif la_ == 5:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.while_statement()
                pass

            elif la_ == 6:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.function_statement()
                pass

            elif la_ == 7:
                localctx = ClanguageParser.Not_control_unvalContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 119
                self.array_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Array_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ClanguageParser.RULE_array_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Str_arr_staContext(Array_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Array_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE(self):
            return self.getToken(ClanguageParser.TYPE, 0)
        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)
        def INT(self):
            return self.getToken(ClanguageParser.INT, 0)
        def STRING(self):
            return self.getToken(ClanguageParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr_arr_sta" ):
                return visitor.visitStr_arr_sta(self)
            else:
                return visitor.visitChildren(self)


    class No_const_arr_staContext(Array_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Array_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE(self):
            return self.getToken(ClanguageParser.TYPE, 0)
        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)
        def INT(self):
            return self.getToken(ClanguageParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNo_const_arr_sta" ):
                return visitor.visitNo_const_arr_sta(self)
            else:
                return visitor.visitChildren(self)


    class Const_arr_staContext(Array_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ClanguageParser.Array_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TYPE(self):
            return self.getToken(ClanguageParser.TYPE, 0)
        def ID(self):
            return self.getToken(ClanguageParser.ID, 0)
        def INT(self):
            return self.getToken(ClanguageParser.INT, 0)
        def constant(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClanguageParser.ConstantContext)
            else:
                return self.getTypedRuleContext(ClanguageParser.ConstantContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_arr_sta" ):
                return visitor.visitConst_arr_sta(self)
            else:
                return visitor.visitChildren(self)



    def array_statement(self):

        localctx = ClanguageParser.Array_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_statement)
        self._la = 0 # Token type
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = ClanguageParser.No_const_arr_staContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(ClanguageParser.TYPE)
                self.state = 123
                self.match(ClanguageParser.ID)
                self.state = 124
                self.match(ClanguageParser.T__2)
                self.state = 125
                self.match(ClanguageParser.INT)
                self.state = 126
                self.match(ClanguageParser.T__3)
                self.state = 127
                self.match(ClanguageParser.T__4)
                pass

            elif la_ == 2:
                localctx = ClanguageParser.Const_arr_staContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(ClanguageParser.TYPE)
                self.state = 129
                self.match(ClanguageParser.ID)
                self.state = 130
                self.match(ClanguageParser.T__2)
                self.state = 131
                self.match(ClanguageParser.INT)
                self.state = 132
                self.match(ClanguageParser.T__3)
                self.state = 133
                self.match(ClanguageParser.T__5)
                self.state = 134
                self.match(ClanguageParser.T__6)
                self.state = 135
                self.constant()
                self.state = 140
